--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST=localhost
+DB_HOST=junction.proxy.rlwy.net
 DB_USER=root
-DB_PASSWORD=root
+DB_PASSWORD=baxHSMgAHoxcqZOSGDzWtdiffHFhePgI
 DB_NAME=synckey_tech
-DB_PORT=3306
+DB_PORT=53662
