--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB_HOST=junction.proxy.rlwy.net
 DB_USER=root
 DB_PASSWORD=baxHSMgAHoxcqZOSGDzWtdiffHFhePgI
-DB_NAME=synckey_tech
+DB_NAME=railway
 DB_PORT=53662
